修改微信分享图标和标题

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 云谷计算
-SEOTitle: 云谷计算 | yg Blog
+SEOTitle: 云谷计算
 header-img: img/home-bg.jpg
 email: luohao-brian@gmail.com
 description: "高调做事,<br/>低调做人..."
