--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ header-img: img/home-bg.jpg
 email: luohao-brian@gmail.com
 description: "高调做事,<br/>低调做人..."
 keyword: "前端技术,云计算,虚拟化,硬件平台,Golang,Python,人工智能,Web"
-url: "http://ygjs.tech"              # your host, for absolute URL
-baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
+url: "https://ygjs.tech"              # your host, for absolute URL
+baseurl: ""                           # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
